--- a/lab.html
+++ b/lab.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
   <link rel="stylesheet" type="text/css" href="./styles/brands.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <title>Пикчи нет!</title>
 </head>
 
@@ -18,6 +21,7 @@
   <!--Навигационная панель-->
   <nav class="navbar sticky-top navbar-top">
     <a class="navbar-brand" href="#">_</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-roggler-icon"></span></button>
     <a class="btn btn-login" href="#" role="button"><i class="fa fa-user"></i> Войти</a>
   </nav>
 
@@ -50,7 +54,27 @@
                     <h6 class="card-title"><a href=""><span class="badge nplus1">N+1</span></a></h6>
                     <h6 class="card-title">На днях в МГУ прошла ежегодная осенняя лекция, посвящённая найденным берестяным грамотам с древнерусскими текстами — в этом сезоне их набралось 11. Многие из них не сохранились в целости, и, по традиции,
                       слушатели пытались сами их расшифровать</h6>
-                    <img src="./img/beresta.jpg" class="card-img-top" alt="...">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/beresta.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/got.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/sber.jpg" alt="Third slide">
+                        </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
                     <hr>
                     <p class="card-text"><small class="text-muted">Автор пикчи: @Yotchikov</small></p>
                   </div>
