Changed top pictures block, added top users list

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div class="col-md-2 left-bar">
       <div class="menu">
         <div class="list-group mb-auto">
-          <a href="#" class="list-group-item list-group-item-action border-0 active"><i class="fa fa-home" aria-hidden="true"></i>&ensp;&ensp;Главная</a>
-          <a href="#" class="list-group-item list-group-item-action border-0"><i class="fa fa-flask" aria-hidden="true"></i>&ensp;&ensp;Лаборатория</a>
-          <a href="#" class="list-group-item list-group-item-action border-0"><i class="fa fa-cog" aria-hidden="true"></i>&ensp;&ensp;Настройки</a>
+          <a href="#" class="list-group-item list-group-item-action border-0 active"><i class="fa fa-home" aria-hidden="true"></i>&ensp;&ensp;ГЛАВНАЯ</a>
+          <a href="#" class="list-group-item list-group-item-action border-0"><i class="fa fa-flask" aria-hidden="true"></i>&ensp;&ensp;ЛАБОРАТОРИЯ</a>
+          <a href="#" class="list-group-item list-group-item-action border-0"><i class="fa fa-cog" aria-hidden="true"></i>&ensp;&ensp;НАСТРОЙКИ</a>
         </div>
       </div>
     </div>
@@ -47,151 +47,112 @@
     <div class="col-md-10">
       <div class="container">
         <!--Пикчи дня-->
-        <h4>Пикчи дня:</h4>
-        <div class="row row-posts">
-          <!--Левая колонка-->
-          <div class="col-md-6">
-            <div class="card post">
-              <div class="row no-gutters">
-                <div class="col-1 tool-panel">
-                  <div class="rate">
-                    <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                    <br>127<br>
-                    <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+        <div class="row">
+          <div class="col-md-10">
+            <hr class="divider">
+            <h4>ПИКЧИ ДНЯ</h4>
+            <div class="row row-posts">
+              <!--Левая колонка-->
+              <div class="col-md-6">
+                <div class="card post">
+                  <div class="row no-gutters">
+                    <div class="col-1 tool-panel">
+                      <div class="rate">
+                        <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
+                        <br>127<br>
+                        <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+                      </div>
+                    </div>
+                    <div class="col-11">
+                      <div class="card-body">
+                        <ul class="card-top">
+                          <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
+                          <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
+                        </ul>
+                        <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
+                        <img src="img/mine.jpg" alt="...">
+                        <hr>
+                        <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="col-11">
-                  <div class="card-body">
-                    <ul class="card-top">
-                      <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
-                      <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
-                    </ul>
-                    <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
-                    <img src="img/mine.jpg" alt="...">
-                    <hr>
-                    <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+              </div>
+              <!--Правая колонка-->
+              <div class="col-md-6">
+                <div class="card post">
+                  <div class="row no-gutters">
+                    <div class="col-1 tool-panel">
+                      <div class="rate">
+                        <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
+                        <br>42<br>
+                        <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+                      </div>
+                    </div>
+                    <div class="col-11">
+                      <div class="card-body">
+                        <ul class="card-top">
+                          <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
+                          <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
+                        </ul>
+                        <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
+                        <img src="./img/rus.jpg" alt="...">
+                        <hr>
+                        <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <!--Правая колонка-->
-          <div class="col-md-6">
-            <div class="card post">
-              <div class="row no-gutters">
-                <div class="col-1 tool-panel">
-                  <div class="rate">
-                    <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                    <br>42<br>
-                    <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-                  </div>
-                </div>
-                <div class="col-11">
-                  <div class="card-body">
-                    <ul class="card-top">
-                      <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
-                      <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
-                    </ul>
-                    <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                    <img src="./img/rus.jpg" alt="...">
-                    <hr>
-                    <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--Новости без пикчи-->
-          <h4>Этим новостям нужна твоя пикча:</h4>
-          <div class="row row-posts">
-            <div class="col-11">
-              <div class="row row-posts">
-                <div class="col-4">
-                  <div class="card">
-                    <div class="card-body">
-                      <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                      <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card">
-                    <div class="card-body">
-                      <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                      <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card">
-                    <div class="card-body">
-                      <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                      <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-1">
-              <button type="button" class="btn btn-viewall btn-lg"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+          <div class="col-md-2">
+            <hr class="divider">
+            <h4>ТОП</h4>
+            <div class="list-group top-list">
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: gold"></i>&ensp;@Yotchikov</a>
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: silver"></i>&ensp;@MC_Zlodeykin</a>
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: #CD7F32"></i>&ensp;@Cookied</a>
+              <a href="#" class="list-group-item list-group-item-action">@Rudy</a>
+              <a href="#" class="list-group-item list-group-item-action">@Zibra72</a>
             </div>
           </div>
         </div>
-        <!--Остальные пикчи-->
-        <br>
+        <!--Новости без пикчи-->
+        <h4>Этим новостям нужна твоя пикча:</h4>
         <div class="row row-posts">
-          <!--Левая колонка-->
-          <div class="col-md-6">
-            <div class="card post">
-              <div class="row no-gutters">
-                <div class="col-1 tool-panel">
-                  <div class="rate">
-                    <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                    <br>127<br>
-                    <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-                  </div>
-                </div>
-                <div class="col-11">
+          <div class="col-11">
+            <div class="row row-posts">
+              <div class="col-4">
+                <div class="card">
                   <div class="card-body">
-                    <ul class="card-top">
-                      <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
-                      <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
-                    </ul>
-                    <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
-                    <img src="img/mine.jpg" alt="...">
-                    <hr>
-                    <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--Правая колонка-->
-          <div class="col-md-6">
-            <div class="card post">
-              <div class="row no-gutters">
-                <div class="col-1 tool-panel">
-                  <div class="rate">
-                    <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                    <br>42<br>
-                    <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-                  </div>
-                </div>
-                <div class="col-11">
-                  <div class="card-body">
-                    <ul class="card-top">
-                      <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
-                      <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
-                    </ul>
+                    <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
                     <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                    <img src="./img/rus.jpg" alt="...">
-                    <hr>
-                    <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="card">
+                  <div class="card-body">
+                    <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
+                    <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="card">
+                  <div class="card-body">
+                    <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
+                    <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <div class="col-1">
+            <button type="button" class="btn btn-viewall btn-lg"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
