--- a/lab.html
+++ b/lab.html
@@ -1,149 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Montserrat:500&display=swap" rel="stylesheet">
-  <script src="./scripts/animation.js" charset="utf-8"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="./styles/main.css">
-  <link rel="stylesheet" type="text/css" href="./styles/brands.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <title>Пикчи нет!</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+</style>
 </head>
-
 <body>
-  <!--Навигационная панель-->
-  <nav class="navbar sticky-top navbar-top">
-    <a class="navbar-brand" href="#">_</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-roggler-icon"></span></button>
-    <a class="btn btn-login" href="#" role="button"><i class="fa fa-user"></i> Войти</a>
-  </nav>
 
-  <!--Тело сайта-->
-  <div class="row no-gutters">
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>
 
-    <!--Левый блок-->
-    <div class="col-md-2 left-bar">
-      <div class="menu list-group">
-        <a href="#" class="list-group-item list-group-item-action border-0 active"><i class="fa fa-home" aria-hidden="true"></i> Главная</a>
-        <a href="#" class="list-group-item list-group-item-action border-0"><i class="fa fa-flask" aria-hidden="true"></i> Лаборатория</a>
-        <a href="#" class="list-group-item list-group-item-action border-0"><i class="fa fa-cog" aria-hidden="true"></i> Настройки</a>
-      </div>
-    </div>
+<h2>Animated Sidenav Example</h2>
+<p>Click on the element below to open the side navigation menu.</p>
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 
-    <!--Правый блок-->
-    <div class="col-md-10">
-      <div class="container">
-        <!--Пикчи дня-->
-        <h4>Пикчи дня:</h4>
-        <div class="row row-posts">
-          <!--Левая колонка-->
-          <div class="col-md-6">
-            <div class="card post">
-              <div class="row no-gutters">
-                <div class="col-1 tool-panel">
-                </div>
-                <div class="col-11">
-                  <div class="card-body">
-                    <h6 class="card-title"><a href=""><span class="badge nplus1">N+1</span></a></h6>
-                    <h6 class="card-title">На днях в МГУ прошла ежегодная осенняя лекция, посвящённая найденным берестяным грамотам с древнерусскими текстами — в этом сезоне их набралось 11. Многие из них не сохранились в целости, и, по традиции,
-                      слушатели пытались сами их расшифровать</h6>
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="img/beresta.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="img/got.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="img/sber.jpg" alt="Third slide">
-                        </div>
-                      </div>
-                      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                      </a>
-                      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                      </a>
-                    </div>
-                    <hr>
-                    <p class="card-text"><small class="text-muted">Автор пикчи: @Yotchikov</small></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--Правая колонка-->
-          <div class="col-md-6">
-            <div class="card post">
-              <div class="row no-gutters">
-                <div class="col-1 tool-panel">
-                  <div class="rate">
-                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    <h6>42</h6>
-                    <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                  </div>
-                </div>
-                <div class="col-11">
-                  <div class="card-body">
-                    <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                    <h6 class="card-title">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</h6>
-                    <img src="./img/rus.jpg" class="card-img-top" alt="...">
-                    <hr>
-                    <p class="card-text"><small class="text-muted">Автор пикчи: @Yotchikov</small></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--Новости без пикчи-->
-          <h4>Этим новостям нужна твоя пикча:</h4>
-          <div class="row row-posts">
-            <div class="col-11">
-              <div class="row row-posts">
-                <div class="col-4">
-                  <div class="card">
-                    <div class="card-body">
-                      <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                      <h6 class="card-title">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</h6>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card">
-                    <div class="card-body">
-                      <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                      <h6 class="card-title">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</h6>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card">
-                    <div class="card-body">
-                      <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                      <h6 class="card-title">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</h6>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-1">
-              <button type="button" class="btn btn-viewall btn-lg"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+</script>
+
 </body>
-
 </html>
