--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <!--Навигационная панель-->
   <div id="page" style="left: 0; right: 0;">
-    <div id="bg-dark"></div>
+    <div id="bg-dark" onclick="closeNav()"></div>
     <nav class="navbar sticky-top navbar-top">
       <button type="button" class="btn btn-link btn-menu" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></button>
       <a class="navbar-brand" href="#">_</a>
@@ -29,7 +29,7 @@
         <form class="form-inline d-inline-flex">
           <input class="form-control" type="search" placeholder="Поиск" aria-label="Search">
         </form>
-        <a class="btn btn-login ml-auto" href="#" role="button"><i class="fa fa-user"></i>&ensp;Войти</a>
+        <a class="btn btn-link btn-menu ml-auto" href="#" role="button"><i class="fa fa-user"></i>&ensp;ВОЙТИ</a>
       </div>
     </nav>
 
@@ -37,9 +37,9 @@
     <!--Левый блок-->
     <div id="menuSideNav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">Главная</a>
-      <a href="#">Лаборатория</a>
-      <a href="#">Настройки</a>
+      <a href="#"><i class="fa fa-home" aria-hidden="true"></i>&ensp;ГЛАВНАЯ</a>
+      <a href="#"><i class="fa fa-flask" aria-hidden="true"></i>&ensp;ЛАБОРАТОРИЯ</a>
+      <a href="#"><i class="fa fa-cog" aria-hidden="true"></i>&ensp;НАСТРОЙКИ</a>
     </div>
 
     <!--Правый блок-->
@@ -48,7 +48,15 @@
       <div class="row">
         <div class="col-md-10">
           <hr class="divider">
-          <h4>ПИКЧИ ДНЯ</h4>
+          <div class="d-flex justify-content-between align-middle">
+            <h4 class="d-inline mt-0">ПИКЧИ ДНЯ</h4>
+            <ul class="list-inline category-choose">
+              <li class="list-inline-item"><a class="active" href="#">ВСЁ</a></li>
+              <li class="list-inline-item"><a href="#">#ПОЛИТИКА</a></li>
+              <li class="list-inline-item"><a href="#">#ОБЩЕСТВО</a></li>
+              <li class="list-inline-item"><a href="#">#СПОРТ</a></li>
+            </ul>
+          </div>
           <div class="row row-posts">
             <!--Левая колонка-->
             <div class="col-md-6">
@@ -119,7 +127,7 @@
       </div>
       <!--Новости без пикчи-->
       <hr class="divider">
-      <h4>ЭТИМ НОВОСТЯМ НУЖНА ТВОЯ ПИКЧА</h4>
+      <h4>#ПОЛИТИКА</h4>
       <div class="row row-posts">
         <div class="col-11">
           <div class="row row-posts">
