--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <!--Тело сайта-->
-    <!--Левый блок-->
+    <!--Меню-->
     <div id="menuSideNav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#"><i class="fa fa-home" aria-hidden="true"></i>&ensp;ГЛАВНАЯ</a>
@@ -42,9 +42,9 @@
       <a href="#"><i class="fa fa-cog" aria-hidden="true"></i>&ensp;НАСТРОЙКИ</a>
     </div>
 
-    <!--Правый блок-->
+    <!--Страница-->
     <div class="container">
-      <!--Пикчи дня-->
+      <!--Пикчи дня заголовок-->
       <div class="row">
         <div class="col-md-10">
           <hr class="divider">
@@ -67,6 +67,8 @@
                       <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
                       <br>127<br>
                       <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+                      <button type="button" class="btn btn-link mb-auto"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+
                     </div>
                   </div>
                   <div class="col-11">
@@ -125,40 +127,81 @@
           </div>
         </div>
       </div>
-      <!--Новости без пикчи-->
-      <hr class="divider">
-      <h4>#ПОЛИТИКА</h4>
-      <div class="row row-posts">
-        <div class="col-11">
+      <!--#ПОЛИТИКА-->
+      <div class="row">
+        <!--Без пикчи-->
+        <div class="col-md-3">
+          <hr class="divider">
+          <h4>БЕЗ ПИКЧИ</h4>
+          <div class="list-group top-list">
+            <a href="#" class="list-group-item list-group-item-action">Новость #1</a>
+            <a href="#" class="list-group-item list-group-item-action">Новость #2</a>
+            <a href="#" class="list-group-item list-group-item-action">Новость #3</a>
+            <a href="#" class="list-group-item list-group-item-action">Новость #4</a>
+            <a href="#" class="list-group-item list-group-item-action">Новость #5</a>
+          </div>
+        </div>
+        <div class="col-md-9">
+          <hr class="divider">
+          <div class="d-flex justify-content-between align-middle">
+            <h4 class="d-inline mt-0">#ПОЛИТИКА</h4>
+          </div>
           <div class="row row-posts">
-            <div class="col-4">
-              <div class="card">
-                <div class="card-body">
-                  <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                  <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
+            <!--Левая колонка-->
+            <div class="col-md-6">
+              <div class="card post">
+                <div class="row no-gutters">
+                  <div class="col-1 tool-panel">
+                    <div class="rate">
+                      <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
+                      <br>127<br>
+                      <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+                      <button type="button" class="btn btn-link mb-auto"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+
+                    </div>
+                  </div>
+                  <div class="col-11">
+                    <div class="card-body">
+                      <ul class="card-top">
+                        <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
+                        <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
+                      </ul>
+                      <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
+                      <img src="img/mine.jpg" alt="...">
+                      <hr>
+                      <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-4">
-              <div class="card">
-                <div class="card-body">
-                  <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                  <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-4">
-              <div class="card">
-                <div class="card-body">
-                  <h6 class="card-title"><a href=""><span class="badge meduza">Meduza</span></a></h6>
-                  <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
+            <!--Правая колонка-->
+            <div class="col-md-6">
+              <div class="card post">
+                <div class="row no-gutters">
+                  <div class="col-1 tool-panel">
+                    <div class="rate">
+                      <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
+                      <br>42<br>
+                      <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+                    </div>
+                  </div>
+                  <div class="col-11">
+                    <div class="card-body">
+                      <ul class="card-top">
+                        <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
+                        <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
+                      </ul>
+                      <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
+                      <img src="./img/rus.jpg" alt="...">
+                      <hr>
+                      <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-1">
-          <button type="button" class="btn btn-viewall btn-lg"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
         </div>
       </div>
     </div>
