--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <div id="page" style="left: 0; right: 0;">
     <div id="bg-dark" onclick="closeNav()"></div>
     <nav class="navbar sticky-top navbar-top">
-      <button type="button" class="btn btn-link btn-menu" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></button>
+      <button type="button" class="btn btn-link btn-menu mr-3" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></button>
       <a class="navbar-brand" href="#">_</a>
       <div class="ml-auto">
         <form class="form-inline d-inline-flex">
           <input class="form-control" type="search" placeholder="Поиск" aria-label="Search">
         </form>
-        <a class="btn btn-link btn-menu ml-auto" href="#" role="button"><i class="fa fa-user"></i>&ensp;ВОЙТИ</a>
+        <a class="btn btn-link btn-menu ml-3" href="#" role="button"><i class="fa fa-user"></i>&ensp;ВОЙТИ</a>
       </div>
     </nav>
 
@@ -67,7 +67,6 @@
                       <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
                       <br>127<br>
                       <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-                      <button type="button" class="btn btn-link mb-auto"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
 
                     </div>
                   </div>
@@ -134,17 +133,21 @@
           <hr class="divider">
           <h4>БЕЗ ПИКЧИ</h4>
           <div class="list-group top-list">
-            <a href="#" class="list-group-item list-group-item-action">Новость #1</a>
-            <a href="#" class="list-group-item list-group-item-action">Новость #2</a>
-            <a href="#" class="list-group-item list-group-item-action">Новость #3</a>
-            <a href="#" class="list-group-item list-group-item-action">Новость #4</a>
-            <a href="#" class="list-group-item list-group-item-action">Новость #5</a>
+            <a href="#" class="list-group-item list-group-item-action">Путин рассказал об избежавшей рецессии российской экономике</a>
+            <a href="#" class="list-group-item list-group-item-action">В Киеве пригрозили отреагировать на запуск поездов по Крымскому мосту</a>
+            <a href="#" class="list-group-item list-group-item-action">Трамп не стал смотреть слушания по делу об импичменте</a>
+            <a href="#" class="list-group-item list-group-item-action">Туск назвал Россию «стратегической проблемой» Европы</a>
+            <a href="#" class="list-group-item list-group-item-action">Лавров в шутку ответил на вопрос о «подготовке» России к выборам в США</a>
           </div>
         </div>
         <div class="col-md-9">
           <hr class="divider">
           <div class="d-flex justify-content-between align-middle">
             <h4 class="d-inline mt-0">#ПОЛИТИКА</h4>
+            <div>
+              <button type="button" class="btn btn-link mr-1"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+              <button type="button" class="btn btn-link ml-1"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+            </div>
           </div>
           <div class="row row-posts">
             <!--Левая колонка-->
@@ -156,7 +159,6 @@
                       <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
                       <br>127<br>
                       <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-                      <button type="button" class="btn btn-link mb-auto"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
 
                     </div>
                   </div>
@@ -164,7 +166,7 @@
                     <div class="card-body">
                       <ul class="card-top">
                         <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
-                        <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
+                        <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
                       </ul>
                       <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
                       <img src="img/mine.jpg" alt="...">
