--- a/index.html
+++ b/index.html
@@ -60,54 +60,46 @@
           <div class="row row-posts">
             <!--Левая колонка-->
             <div class="col-md-6">
-              <div class="card post">
-                <div class="row no-gutters">
-                  <div class="col-1 tool-panel">
-                    <div class="rate">
-                      <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                      <br>127<br>
-                      <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+              <div class="card post d-flex flex-row">
+                <div class="tool-panel">
+                  <div class="rate">
+                    <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
+                    <br>127<br>
+                    <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
 
-                    </div>
                   </div>
-                  <div class="col-11">
-                    <div class="card-body">
-                      <ul class="card-top">
-                        <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
-                        <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
-                      </ul>
-                      <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
-                      <img src="img/mine.jpg" alt="...">
-                      <hr>
-                      <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
-                    </div>
-                  </div>
+                </div>
+                <div class="card-body">
+                  <ul class="card-top">
+                    <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
+                    <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
+                  </ul>
+                  <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
+                  <img src="img/mine.jpg" alt="...">
+                  <hr>
+                  <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
                 </div>
               </div>
             </div>
             <!--Правая колонка-->
             <div class="col-md-6">
-              <div class="card post">
-                <div class="row no-gutters">
-                  <div class="col-1 tool-panel">
-                    <div class="rate">
-                      <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                      <br>42<br>
-                      <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-                    </div>
+              <div class="card post d-flex flex-row">
+                <div class="tool-panel">
+                  <div class="rate">
+                    <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
+                    <br>42<br>
+                    <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
                   </div>
-                  <div class="col-11">
-                    <div class="card-body">
-                      <ul class="card-top">
-                        <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
-                        <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
-                      </ul>
-                      <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                      <img src="./img/rus.jpg" alt="...">
-                      <hr>
-                      <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
-                    </div>
-                  </div>
+                </div>
+                <div class="card-body">
+                  <ul class="card-top">
+                    <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
+                    <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
+                  </ul>
+                  <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
+                  <img src="./img/rus.jpg" alt="...">
+                  <hr>
+                  <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
                 </div>
               </div>
             </div>
@@ -115,14 +107,16 @@
         </div>
         <!--Топ пикчеры-->
         <div class="col-md-2">
-          <hr class="divider">
-          <h4>ТОП</h4>
-          <div class="list-group top-list">
-            <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: gold"></i>&ensp;@Yotchikov</a>
-            <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: silver"></i>&ensp;@MC_Zlodeykin</a>
-            <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: #CD7F32"></i>&ensp;@Cookied</a>
-            <a href="#" class="list-group-item list-group-item-action">@Rudy</a>
-            <a href="#" class="list-group-item list-group-item-action">@Zibra72</a>
+          <div class="position-fixed">
+            <hr class="divider">
+            <h4>ТОП</h4>
+            <div class="list-group top-list">
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: gold"></i>&ensp;@Yotchikov</a>
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: silver"></i>&ensp;@MC_Zlodeykin</a>
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: #CD7F32"></i>&ensp;@Cookied</a>
+              <a href="#" class="list-group-item list-group-item-action">@Rudy</a>
+              <a href="#" class="list-group-item list-group-item-action">@Zibra72</a>
+            </div>
           </div>
         </div>
       </div>
@@ -140,68 +134,32 @@
             <a href="#" class="list-group-item list-group-item-action">Лавров в шутку ответил на вопрос о «подготовке» России к выборам в США</a>
           </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-7">
           <hr class="divider">
           <div class="d-flex justify-content-between align-middle">
             <h4 class="d-inline mt-0">#ПОЛИТИКА</h4>
             <div>
-              <button type="button" class="btn btn-link mr-1"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
-              <button type="button" class="btn btn-link ml-1"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+              <button type="button" class="btn btn-link slide-arrow mr-1"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+              <button type="button" class="btn btn-link slide-arrow ml-1"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
             </div>
           </div>
-          <div class="row row-posts">
-            <!--Левая колонка-->
-            <div class="col-md-6">
-              <div class="card post">
-                <div class="row no-gutters">
-                  <div class="col-1 tool-panel">
-                    <div class="rate">
-                      <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                      <br>127<br>
-                      <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-
-                    </div>
-                  </div>
-                  <div class="col-11">
-                    <div class="card-body">
-                      <ul class="card-top">
-                        <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
-                        <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
-                      </ul>
-                      <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
-                      <img src="img/mine.jpg" alt="...">
-                      <hr>
-                      <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
-                    </div>
-                  </div>
-                </div>
+          <div class="card post d-flex flex-row">
+            <div class="tool-panel">
+              <div class="rate">
+                <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
+                <br>127<br>
+                <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
               </div>
             </div>
-            <!--Правая колонка-->
-            <div class="col-md-6">
-              <div class="card post">
-                <div class="row no-gutters">
-                  <div class="col-1 tool-panel">
-                    <div class="rate">
-                      <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-                      <br>42<br>
-                      <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-                    </div>
-                  </div>
-                  <div class="col-11">
-                    <div class="card-body">
-                      <ul class="card-top">
-                        <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
-                        <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
-                      </ul>
-                      <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
-                      <img src="./img/rus.jpg" alt="...">
-                      <hr>
-                      <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <div class="card-body">
+              <ul class="card-top">
+                <li><a href="" class="card-title"><span class="badge vedomosti">Ведомости</span></a></li>
+                <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
+              </ul>
+              <p class="card-text">Минпромторг предлагает установить квоты на госзакупки отечественного</p>
+              <img src="img/importo.jpg" alt="...">
+              <hr>
+              <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
             </div>
           </div>
         </div>
